--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,97 +1,127 @@
-/* ------------ */
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+* {
+  font-family:Arial, Helvetica, sans-serif;
+  color: #000;
 }
-html {
-  height: 100%;
-}
-/* ------------ */
-body {
-  font-family: monospace;
-  height: 100%;
-}
-h1 {
-  width: 100%;
-  margin-bottom: 40px;
-}
-/* ------------ */
-.container {
-  height: 100%;
-  width: 100%;
-  max-width: 570px;
-  margin: 0 auto;
-  padding: 60px;
 
+body{
+  background-color: rgb(50, 99, 83);
   display: flex;
   flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+ 
+}
+
+.container{
+  padding-bottom: 40px;
+}
+
+.search {
+  
+  margin-top: 30px;
+  width: clamp(250px, 90vw, 900px);
+  display: flex;
   justify-content: center;
+  gap: 10px;
   align-items: center;
 }
-/* ------------ */
-.form {
+
+.search input {
   width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr 80px;
-  grid-column-gap: 10px;
-}
-.form-submit {
+  background-color: white;
+  height: 40px;
   outline: none;
-  border: 1px solid rgb(232, 232, 232);
+  border: 1px solid transparent;
+  padding-left: 15px;
+  border-radius: 10px;
+  color: rgb(50, 99, 83);
+  font-size: clamp(16px, 3vw, 25px);
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px !important;
+}
+
+.search button {
+  height: 42px;
+  color: rgb(50, 99, 83);
+  border-radius: 10px;
   background-color: white;
+  border: 1px solid transparent;
+  font-size: clamp(18px, 4vw, 22px);
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px !important;
+}
+
+.item{
+  display: grid;
+  align-items: center;
+}
+
+.card {
+  border: 1px solid transparent;
+  background-color: #eee;
   border-radius: 5px;
-  cursor: pointer;
-  font-family: monospace;
-  font-size: 14px;
-  line-height: 36px;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px !important;;
+  padding: 20px;
+  width: 400px;
+  justify-content: space-between;
+  
 }
-.form-submit:focus {
-  box-shadow: 0 0 0 0.5px rgb(153, 153, 153);
-}
-.cards {
-  display: flex;
-  margin: 20px 0;
-  width: 100%;
-}
-.card-item {
-  width: 100%;
-  padding: 5px 20px 20px;
-  border: 1px solid rgb(232, 232, 232);
-  background-color: white;
-  border-radius: 5px;
-}
-.card-info {
-  margin-top: 40px;
+
+.city{
+  
   display: flex;
   justify-content: space-between;
 }
-.card-activity {
-  line-height: 1.2;
-  margin-top: 10px;
+
+.city h6 {
+  margin-bottom: 5px;
+  font-weight: normal;
 }
-.tag-error {
-  width: 100%;
+
+.weather {
   text-align: center;
 }
-/* ------------ */
-.is-element-hidden {
-  display: none;
+
+.waiting {
+  text-transform: uppercase;
+  color: white;
 }
-/* ------------ */
-@media (max-width: 620px) {
-  .container {
-    width: 100%;
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 60px 20px;
-  }
-  .form {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 10px;
-  }
+
+.degrees {
+  font-size: 50px;
+  margin-bottom: 10px;
+
+}
+
+.temp {
+  font-size: 10px;
+  color: #afa7a7;
+}
+
+.feel{
+  display: flex;
+  justify-content: space-between;
+}
+
+.feel p {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.feel img {
+  margin-right: 10px;
+}
+
+.weather-image {
+  flex: 0 0 auto;
+}
+
+footer {
+  margin-top: auto;
+  text-align: center;
+  
+}
+
+footer p{
+  color: white;
 }
